# Akira-Trader

./: .env.example  .gitignore  README.md  launch_cli.ps1  launch_web.ps1  pyproject.toml
scripts/: generate_submission.py
